<resources>
    <string name="app_name">AlerT</string>
    <string name="channel_name">AlerT Notifications</string>
    <string name="channel_description">Upcoming arrival alerts for MBTA transit.</string>

    <string name="view_alarms_page">My Alarms</string>
    <string name="new_alarm_page">New Alarm</string>
    <string name="edit_alarm_page">Edit Alarm</string>

    <string name="alarm_list_empty">No alarms saved yet</string>

    <string name="save_alarm_menu">Save Alarm Menu</string>

    <string name="time">Time</string>

    <string name="nickname">Nickname</string>
    <string name="nickname_dialog_title">Alarm Name (optional)</string>
    <string name="nickname_default">New Alarm</string>

    <string name="repeat">Repeat</string>
    <string name="repeat_dialog_title">Set Repeat Type</string>
    <string name="repeat_custom_dialog_title">Select Custom Repeat</string>
    <string name="repeat_custom_invalid">At least one day must be selected for custom repeat.</string>

    <string name="duration">Duration</string>
    <string name="duration_dialog_title">Receive notifications for:</string>

    <string name="next_firing_time">Next firing time:</string>

    <string name="route">Route</string>
    <string name="route_default">Select a route…</string>
    <string name="route_dialog_title">Route Selection</string>
    <string name="route_dialog_default">Type a route…</string>
    <string name="route_invalid">A route selection is required.</string>

    <string name="direction">Direction</string>
    <string name="direction_default">Select a direction…</string>
    <string name="direction_dialog_title">Choose Direction</string>
    <string name="direction_invalid">A direction selection is required.</string>

    <string name="stop">Stop</string>
    <string name="stop_default">Select a stop…</string>
    <string name="stop_dialog_title">Stop Selection</string>
    <string name="stop_dialog_default">Type a stop…</string>
    <string name="stop_invalid">A stop selection is required.</string>

    <string name="endpoints">Endpoints</string>
    <string name="endpoints_default">Select endpoints…</string>
    <string name="endpoints_dialog_title">Select Endpoints</string>
    <string name="endpoints_invalid">At least one endpoint must be selected.</string>

    <string name="add_alarm_dialog">Add "%1$s" to your alarms?</string>
    <string name="update_alarm_dialog">Update this alarm?</string>
    <string name="remove_alarm_dialog">Remove "%1$s" from your alarms?</string>

    <string name="alarm_status">Alarm Status</string>

    <string name="alarm_no_predictions">No trains arriving/departing soon.</string>
    <string name="error_alarm_prediction">Error fetching MBTA arrival times for %s.</string>
    <string name="error_no_internet">Please check your internet connection.</string>

    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="fix">FIX</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>

</resources>
