<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jesseoberstein.alert.activities.alarms.ViewAlarms">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/alarm_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/alarm_list_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:text="@string/alarm_list_empty"
        android:textAlignment="center"
        android:textSize="@dimen/list_empty_text_size"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/list_avatar_padding_start"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add"
        android:tint="@color/white"/>


</RelativeLayout>
