<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="StopSectionBinding">
        <variable name="stop" type="com.jesseoberstein.alert.models.mbta.Stop"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/alarmSettings_section_label_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="?attr/sectionLabelColor"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/alarmSettings_section_value_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/stop_default"
                android:text="@{stop.toString()}"
                android:textSize="20sp"
                android:textColor="@color/gray"
                android:layout_below="@id/alarmSettings_section_label_stop"
                android:layout_marginBottom="15dp"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>

    </LinearLayout>

</layout>